# src/controllers/orders.ts
@@ -1,15 +1,18 @@
-import { Body, Post, Route, Request, Get, Query, Hidden } from "tsoa";
+import { Body, Post, Route, Request, Get, Query, Hidden, Tags, SuccessResponse,Response,  } from "tsoa";
 import * as response from "../responses";
 import { OrdersService } from "../service/OrdersService"
 
- 
 @Route("addOrder")
+@Tags('Orders')
 export default class OrdersController {
   /**
    * Create a new order
    * @summary
+   * 
    */
     @Post("/create")
+    @SuccessResponse ('200', 'Create Order') 
+    @Response ('422', 'Missing Field')
     public async addNewOrder(@Request() req: any, @Body() res: any): Promise<any> {
         try {
             const { token, products, price, description } = req.body
@@ -34,7 +37,6 @@ export default class OrdersController {
             const result = await new OrdersService().create({price: price, description: description, products: products, token: token});
 
             res.status(200).send({status: "Success", message:"Create Order", data: result})
-
         } catch (error) {
             
         }
@@ -45,6 +47,9 @@ export default class OrdersController {
    * @summary 
    */
     @Get("/all")
+    @SuccessResponse ('200', 'All Orders') 
+    @Response ('422', 'Missing Field')
+    @Response ('403', 'Error')
     public async getOrders(@Request() res: any, @Query() @Hidden() token?: string): Promise<any> {
         try{
             if (!token)
@@ -66,6 +71,9 @@ export default class OrdersController {
    * @summary
    */
     @Post("/details")
+    @SuccessResponse ('200', 'Orders Details') 
+    @Response ('422', 'Missing Field')
+    @Response ('403', 'Error')
     public async getOrderDetails(@Request() req: any, @Body() res: any): Promise<any> {
         try{
             const { OrderUID } = req.body
